# PolyGraphPy

./: .gitignore  MANIFEST.in  create_several_homopoly_xyz.sh  create_several_xyz.sh  pyproject.toml  requirements.txt
examples/: dftb_pipeline.py
polygraphpy/: __main__.py  pipelines.py
polygraphpy/core/: molecule.py  polymer.py  simulator.py
polygraphpy/data/: model_gcn.pt  model_gnn_trained.pt  polarizability_data.csv  polarizability_data_copoly.csv  polarizability_data_full.csv  polarizability_data_not_scaled.csv  total_results.csv
polygraphpy/data/gnn_output/: df_error.csv  df_results.csv  gcn_hyperparameters 2.csv  gcn_hyperparameters.csv  model_gcn 2.pt  model_gcn.pt  scaled_output.csv  training_statistics.csv
polygraphpy/data/prediction_output/: training_statistics.csv
polygraphpy/dftb/: dftb_input.py  dftb_simulation.py  polarizability_trace.py  smiles_to_xyz.py
polygraphpy/gnn/: pre_processing.py  prediction.py  train.py
polygraphpy/gnn/models/: gcn.py
tests/: 7294_10.xyz  7294_2.xyz  7294_4.xyz  7294_8.xyz  diffusion_model.ipynb  diffusion_model.pt  diffusion_model2.ipynb  filterd_polarizability.csv  get_adj_from_pdb.ipynb  gpt.ipynb  gpt.py  gpt_2.ipynb  graph_diffusion.ipynb  graph_diffusion_model.pt  graph_prediction_training.csv  graphaf.ipynb  graphunet.ipynb  input.csv  molecule.xyz  monomer_7294.xyz  rcb.ipynb  reconstruction_metrics.csv  train.py  vgae.ipynb  xyz_generator.ipynb
tests/images_for_training/: polarizability.csv
